Make visible again in case of successful ajax request This is bug fix.

--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ h1 {
 
 /*** Nearby Areas Section ***/
 .nearby-areas-section {
-  visibility: hidden;
+  display: none;
 }
 
 .nearby-areas-section__list {
